--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "private": true,
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
     "@material-ui/core": "^4.12.3",
     "@material-ui/pickers": "^3.3.10",
+    "@mui/material": "^5.10.10",
+    "@mui/styled-engine-sc": "^5.10.6",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -25,7 +29,7 @@
     "react-shimmer-effect": "^1.0.9",
     "react-toastify": "^7.0.4",
     "react-useinterval": "^1.0.2",
-    "styled-components": "^5.3.0",
+    "styled-components": "^5.3.6",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
