--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^17.0.2",
     "react-credit-cards": "^0.8.3",
     "react-dom": "^17.0.2",
+    "react-github-login-button": "^1.0.1",
     "react-icons": "^4.2.0",
     "react-input-mask": "^2.0.4",
     "react-loader-spinner": "^4.0.0",
