--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   "scripts": {
     "start": "react-scripts start",
     "start_local": "react-scripts --openssl-legacy-provider start",
-    "build": "react-scripts build -- --verbose",
+    "build": "set GENERATE_SOURCEMAP=false && react-scripts build -- --verbose",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "prepare": "husky install"
