--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "start_local": "react-scripts --openssl-legacy-provider start",
-    "build": "react-scripts build -- --verbose",
+    "start_local": "react-scripts start --openssl-legacy-provider",
+    "build": "GENERATE_SOURCEMAP=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "prepare": "husky install"
