--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "axios": "^0.21.1",
+    "axios": "^0.21.4",
     "date-fns": "^2.23.0",
     "dayjs": "^1.10.6",
     "file-saver": "^2.0.5",
     "html2canvas": "^1.3.2",
-    "qs": "^6.10.1",
+    "qs": "^6.11.0",
     "react": "^17.0.2",
     "react-credit-cards": "^0.8.3",
     "react-dom": "^17.0.2",
@@ -55,6 +55,7 @@
     ]
   },
   "devDependencies": {
+    "@types/query-string": "^6.3.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-import": "^2.25.3",
