--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "file-saver": "^2.0.5",
     "html2canvas": "^1.3.2",
     "qs": "^6.11.0",
+    "query-string": "^7.1.1",
     "react": "^17.0.2",
     "react-credit-cards": "^0.8.3",
     "react-dom": "^17.0.2",
